--- a/launceston.html
+++ b/launceston.html
@@ -128,8 +128,8 @@
                         </li>
                         <li>
                           <a
-                            href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
-                            >Small Busniess Debt Collection</a
+                            href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
+                            >Small Business Debt Collection</a
                           >
                         </li>
                         <li>
@@ -247,8 +247,8 @@
                       >Personal Debt Collection</a
                     >
                     <a
-                      href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
-                      >Small Busniess Debt Collection</a
+                      href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
+                      >Small Business Debt Collection</a
                     >
                     <a
                       href="https://www.debtcollectionexperts.com.au/debt-collection-agency.html"
@@ -618,7 +618,7 @@
               data-aos="fade-down"
               data-aos-duration="1000"
             >
-              <h2>What Debt Collection Launceston services do we offer?</h2>
+              <h2>What Debt Collection and recovery services do we offer?</h2>
               <p>
                 Are financial challenges impacting you or your business or
                 across Tasmania? Look no further! Our dedicated debt collection
@@ -772,7 +772,7 @@
               <div class="col-md-6 col-lg-4">
                 <article class="service-card">
                   <a
-                    href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
+                    href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
                   >
                     <div class="services-card-img">
                       <img
@@ -791,7 +791,7 @@
                   </a>
                   <div class="learn-more-btn">
                     <a
-                      href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
+                      href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
                       >Learn more <i class="fa-solid fa-arrow-right"></i>
                     </a>
                   </div>
@@ -1432,7 +1432,7 @@
                     </li>
                     <li>
                       <a
-                        href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
+                        href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
                         >Small Business Debt Collection</a
                       >
                     </li>
