--- a/small-business-debt-collection.html
+++ b/small-business-debt-collection.html
@@ -128,8 +128,8 @@
                         </li>
                         <li>
                           <a
-                            href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
-                            >Small Busniess Debt Collection</a
+                            href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
+                            >Small Business Debt Collection</a
                           >
                         </li>
                         <li>
@@ -247,8 +247,8 @@
                       >Personal Debt Collection</a
                     >
                     <a
-                      href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
-                      >Small Busniess Debt Collection</a
+                      href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
+                      >Small Business Debt Collection</a
                     >
                     <a
                       href="https://www.debtcollectionexperts.com.au/debt-collection-agency.html"
@@ -355,7 +355,7 @@
 
       <!-- Mobile Navigation Section HTML End -->
 
-      <!-- Small Busniess Debt Collection Hero Section HTML Start -->
+      <!-- Small Business Debt Collection Hero Section HTML Start -->
 
       <section id="Hero">
         <div class="hero-wrapper overflow-hidden">
@@ -388,7 +388,7 @@
         </div>
       </section>
 
-      <!-- Small Busniess Debt Collection Hero Section HTML End -->
+      <!-- Small Business Debt Collection Hero Section HTML End -->
     </header>
 
     <!-- Header Part HTML End -->
@@ -1503,7 +1503,7 @@
                     </li>
                     <li>
                       <a
-                        href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
+                        href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
                         >Small Business Debt Collection</a
                       >
                     </li>
