--- a/debt-collection.html
+++ b/debt-collection.html
@@ -128,8 +128,8 @@
                         </li>
                         <li>
                           <a
-                            href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
-                            >Small Busniess Debt Collection</a
+                            href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
+                            >Small Business Debt Collection</a
                           >
                         </li>
                         <li>
@@ -247,8 +247,8 @@
                       >Personal Debt Collection</a
                     >
                     <a
-                      href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
-                      >Small Busniess Debt Collection</a
+                      href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
+                      >Small Business Debt Collection</a
                     >
                     <a
                       href="https://www.debtcollectionexperts.com.au/debt-collection-agency.html"
@@ -1499,7 +1499,7 @@
                     </li>
                     <li>
                       <a
-                        href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
+                        href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
                         >Small Business Debt Collection</a
                       >
                     </li>
