--- a/error.html
+++ b/error.html
@@ -124,8 +124,8 @@
                         </li>
                         <li>
                           <a
-                            href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
-                            >Small Busniess Debt Collection</a
+                            href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
+                            >Small Business Debt Collection</a
                           >
                         </li>
                         <li>
@@ -243,8 +243,8 @@
                       >Personal Debt Collection</a
                     >
                     <a
-                      href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
-                      >Small Busniess Debt Collection</a
+                      href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
+                      >Small Business Debt Collection</a
                     >
                     <a
                       href="https://www.debtcollectionexperts.com.au/debt-collection-agency.html"
@@ -440,7 +440,7 @@
                     </li>
                     <li>
                       <a
-                        href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
+                        href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
                         >Small Business Debt Collection</a
                       >
                     </li>
