--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                         </li>
                         <li>
                           <a
-                            href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
-                            >Small Busniess Debt Collection</a
+                            href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
+                            >Small Business Debt Collection</a
                           >
                         </li>
                         <li>
@@ -253,8 +253,8 @@
                       >Personal Debt Collection</a
                     >
                     <a
-                      href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
-                      >Small Busniess Debt Collection</a
+                      href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
+                      >Small Business Debt Collection</a
                     >
                     <a
                       href="https://www.debtcollectionexperts.com.au/debt-collection-agency.html"
@@ -450,7 +450,7 @@
                         >Debt Recovery</a
                       >, and related services including
                       <a
-                        href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
+                        href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
                         >Small Business Debt Collection</a
                       >
                       and
@@ -724,7 +724,7 @@
               <div class="col-md-6 col-lg-4">
                 <article class="service-card">
                   <a
-                    href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
+                    href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
                   >
                     <div class="services-card-img">
                       <img
@@ -743,7 +743,7 @@
                   </a>
                   <div class="learn-more-btn">
                     <a
-                      href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
+                      href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
                       >Learn more <i class="fa-solid fa-arrow-right"></i>
                     </a>
                   </div>
@@ -1577,7 +1577,7 @@
                     </li>
                     <li>
                       <a
-                        href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
+                        href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
                         >Small Business Debt Collection</a
                       >
                     </li>
