--- a/our-services.html
+++ b/our-services.html
@@ -128,8 +128,8 @@
                         </li>
                         <li>
                           <a
-                            href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
-                            >Small Busniess Debt Collection</a
+                            href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
+                            >Small Business Debt Collection</a
                           >
                         </li>
                         <li>
@@ -247,8 +247,8 @@
                       >Personal Debt Collection</a
                     >
                     <a
-                      href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
-                      >Small Busniess Debt Collection</a
+                      href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
+                      >Small Business Debt Collection</a
                     >
                     <a
                       href="https://www.debtcollectionexperts.com.au/debt-collection-agency.html"
@@ -562,7 +562,7 @@
               <div class="col-md-6 col-lg-4">
                 <article class="service-card">
                   <a
-                    href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
+                    href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
                   >
                     <div class="services-card-img">
                       <img
@@ -581,7 +581,7 @@
                   </a>
                   <div class="learn-more-btn">
                     <a
-                      href="https://www.debtcollectionexperts.com.au/personal-debt-collection.html"
+                      href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
                       >Learn more <i class="fa-solid fa-arrow-right"></i>
                     </a>
                   </div>
@@ -1641,7 +1641,7 @@
                     </li>
                     <li>
                       <a
-                        href="https://www.debtcollectionexperts.com.au/small-busniess-debt-collection.html"
+                        href="https://www.debtcollectionexperts.com.au/small-business-debt-collection.html"
                         >Small Business Debt Collection</a
                       >
                     </li>
